Fixed on github.com the waffle spacing

--- a/luciaconchellodotcom/style.css
+++ b/luciaconchellodotcom/style.css
@@ -838,7 +838,7 @@ img.right {
 }
 .waffleimgs.koons img:nth-child(3) {
 	width: 42%; 
-	padding: 20px 6% 20px 3%;
+	padding: 20px 6% 20px 2%;
 }
 .waffleimgs.claes img:nth-child(2) {
 	width: 36%;
@@ -846,7 +846,7 @@ img.right {
 }
 .waffleimgs.claes img:nth-child(3) {
 	width: 42%; 
-	padding: 20px 7% 20px 4%;
+	padding: 20px 7% 20px 3%;
 }
 
 
